# fire-perimeter-processor

./: README.md  count_ml_pairs.py  data_availability_summary.txt  extract_ml_training_data.py  inspect_shapefile_columns.py  list_2025_fires.py  process_fire_perimeters.py  pyproject.toml  unzip_data.sh
